---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: ???
  Features:
    - Spidertron plays sounds when entering and exiting a vehicle
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: 5 January 2020
  Features:
    - Spidertron now rides on top of vehicles instead of inside. Experimental so off by default.
    - Completed changes required for Spidertron Engineer to depend on this mod
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 4 January 2020
  Features:
    - Added is_spidertron_in_vehicle remote interface for future Spidertron Engineer compatibility
  Bugfixes:
    - Fixed crash when using non-entity GUIs with auto-sort enabled
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 3 January 2020
  Features:
    - Automatically sorts spidertron inventory
    - Shift + E to open the GUI of the vehicle that you are currently driving
    - Added smoke effect when reactivating hidden spidertron
  Bugfixes:
    - Fixed selected weapon slot being reset to slot 1 when spidertron is reactivated
    - Fixed crash when a vehicle containing a player is destroyed
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 21 December 2020
  Features:
    - Shift + Q to select remote connected to the spidertron that you are hovering over
    - Added thumbnail
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 12 December 2020
  Features:
    - 1.1 compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 12 December 2020
  Features:
    - Initial release